--- a/requirements.txt
+++ b/requirements.txt
@@ -5,6 +5,9 @@ cachetools==5.5.1
 certifi==2025.1.31
 charset-normalizer==3.4.1
 click==8.1.8
+contourpy==1.3.1
+cycler==0.12.1
+fonttools==4.56.0
 gitdb==4.0.12
 GitPython==3.1.44
 idna==3.10
@@ -12,8 +15,10 @@ Jinja2==3.1.5
 joblib==1.4.2
 jsonschema==4.23.0
 jsonschema-specifications==2024.10.1
+kiwisolver==1.4.8
 markdown-it-py==3.0.0
 MarkupSafe==3.0.2
+matplotlib==3.10.0
 mdurl==0.1.2
 narwhals==1.26.0
 numpy==2.2.3
@@ -24,6 +29,7 @@ protobuf==5.29.3
 pyarrow==19.0.0
 pydeck==0.9.1
 Pygments==2.19.1
+pyparsing==3.2.1
 python-dateutil==2.9.0.post0
 pytz==2025.1
 referencing==0.36.2
@@ -32,6 +38,7 @@ rich==13.9.4
 rpds-py==0.22.3
 scikit-learn==1.6.1
 scipy==1.15.1
+seaborn==0.13.2
 six==1.17.0
 smmap==5.0.2
 streamlit==1.42.0
